--- a/index.html
+++ b/index.html
@@ -22,36 +22,39 @@
 
         <h2>Я студентка школы CodeGirlSchool👩‍💻</h2>
 
-        <div class="photo"></div>
+        <img class="avatar" width="218" src="img/photo.jpg" alt="Аватар студентки">
 
         <span class="theme-toggler" id="toggle">
             🌓
         </span>
 
-        <h3>About me</h3>
+        <div class="info">
 
-        <p>Люблю путешествовать✈️ и играть в бадминтон🏸.</p>
-        <p>Моя профессия обучать📚 детей таким курсам, как:</p>
-        <ul>
-            <li>CorelDraw </li>
-            <li>Photoshop </li>
-            <li>Figma </li>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>C</li>
-            <li>C++</li>
-            <li>PHP</li>
-            <li>Pascal</li>
-            <li>С#</li>
-            <li>PowerPoint</li>
-            <li>Word</li>
-            <li>Excel</li>
-        </ul>
+            <h3>About me</h3>
+
+            <p>Люблю путешествовать✈️ и играть в бадминтон🏸.</p>
+            <p>Моя профессия обучать📚 детей таким курсам, как:</p>
+            <ul>
+                <li>CorelDraw </li>
+                <li>Photoshop </li>
+                <li>Figma </li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>C</li>
+                <li>C++</li>
+                <li>PHP</li>
+                <li>Pascal</li>
+                <li>С#</li>
+                <li>PowerPoint</li>
+                <li>Word</li>
+                <li>Excel</li>
+            </ul>
 
 
-        <p>Заинтересовалась web-разработкой, а именно языком Java Script, потому что хочу освоить. Это будет новым навыком в моём развитии, а также хочется попробывать себя в новой професии, в качестве frontend-разработчицы. Исполнить свою давнюю мечту.
-            Всегда хотелось понять, какого это - работать в дружной команде и выполнять интересные проекты. Погрузиться в IT атмосферу. Очень надеюсь, что в будущем не разочаруюсь и всё будет именно так, как себе представляю. Люблю идти вперёд и не останавливаться
-            на достигнутом. Движение - это жизнь😊</p>
+            <p>Заинтересовалась web-разработкой, а именно языком Java Script, потому что хочу освоить. Это будет новым навыком в моём развитии, а также хочется попробывать себя в новой професии, в качестве frontend-разработчицы. Исполнить свою давнюю мечту.
+                Всегда хотелось понять, какого это - работать в дружной команде и выполнять интересные проекты. Погрузиться в IT атмосферу. Очень надеюсь, что в будущем не разочаруюсь и всё будет именно так, как себе представляю. Люблю идти вперёд и не
+                останавливаться на достигнутом. Движение - это жизнь😊</p>
+        </div>
 
         <strong>💗 Любимые фильмы 💗 </strong>
 
