--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </ul>
 
 
-            <p>Заинтересовалась web-разработкой, а именно языком Java Script, потому что хочу освоить. Это будет новым навыком в моём развитии, а также хочется попробывать себя в новой професии, в качестве frontend-разработчицы. Исполнить свою давнюю мечту.
+            <p>Заинтересовалась web-разработкой, а именно языком Java Script, потому что хочу освоить. Это будет новым навыком в моём развитии, а также хочется попробывать себя в новой професcии, в качестве frontend-разработчицы. Исполнить свою давнюю мечту.
                 Всегда хотелось понять, какого это - работать в дружной команде и выполнять интересные проекты. Погрузиться в IT атмосферу. Очень надеюсь, что в будущем не разочаруюсь и всё будет именно так, как себе представляю. Люблю идти вперёд и не
                 останавливаться на достигнутом. Движение - это жизнь😊</p>
         </div>
